# GinkgoCapstone

./: .gitignore  README.md  augmentation.ipynb  demos.ipynb  demos3 copy.ipynb  demos3.ipynb  make_dataset_for_dl_20201027.ipynb  methods.py  perform_labeling.py  small_train_labels.csv  small_val_labels.csv  test_net.py  train_net.py  trueFN.txt
labeled_dataset/1000745/: 1000745_labels.csv
labeled_dataset/1002511/: 1002511_labels.csv
labeled_dataset/1004039/: 1004039_labels.csv
labeled_dataset/1004042/: 1004042_labels.csv
labeled_dataset/1005552/: 1005552_labels.csv
labeled_dataset/1005554/: 1005554_labels.csv
labeled_dataset/1006470/: 1006470_labels.csv
labeled_dataset/1006474/: 1006474_labels.csv
labeled_dataset/1008408/: 1008408_labels.csv
labeled_dataset/1008409/: 1008409_labels.csv
labeled_dataset/1009350/: 1009350_labels.csv
labeled_dataset/1009351/: 1009351_labels.csv
labeled_dataset/1009352/: 1009352_labels.csv
labeled_dataset/1009356/: 1009356_labels.csv
labeled_dataset/1012688/: 1012688_labels.csv
labeled_dataset/1012690/: 1012690_labels.csv
labeled_dataset/1013821/: 1013821_labels.csv
labeled_dataset/1014581/: 1014581_labels.csv
labeled_dataset/1014582/: 1014582_labels.csv
labeled_dataset/1014584/: 1014584_labels.csv
package/: .gitignore
package_draft/: AdaptiveThresholding.py  AverageThresholding.py  BeadFinder.py  DL_finder.py  DL_model.py  README.md  beads_coords_my_plate.txt  beads_ids_my_plate.txt  demo.ipynb  helper.py  main.py  test.py
packaging_for_pip/: setup.cfg  setup.py
(+663 files in other folders)
