[metadata]
name = example_python_package
version = 0.0.1
author = People
author_email = skdf@giosdjf.cinasdfo
description = cool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
